welcome.lessons.welcome.methods.basics.Methods.scala.error
Methods:12: error: not found: value poseBiscuits
poseBiscuits();
^