welcome.lessons.welcome.methods.basics.Methods.scala.code
def goAndGet() {
var n=0;
while(!estSurBiscuit()){
	avance();
	n=n+1;
}
prendBiscuit();
for(m<-1 to n){
	recule();
}
poseBiscuits();
}
for(m<-1 to 7){
	goAndGet();
droite(); avance(); gauche();
}
